--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -1,7 +1,7 @@
 <div class="small-header">
     <div class="hpanel">
         <div class="panel-body" style="width: 100%;" ng-class="{'header-embedded' : global.embedded, 'no-sides' : !global.embedded}">
-            <div class="pull-left" tour-step order="1" title="People and Companies" content="To view people by role or industry, or sort companies by investment, visit the People and Company pages." placement="bottom">
+            <div class="pull-left" tour-step order="1" title="People, Companies, and Resources" content="To view people by role or industry, list companies, or find resources, click these links." placement="bottom">
                 <ul class="header-nav">
                     <li ui-sref="community.dashboard({location_path: global.location.key, community_path: global.nav.overview, tail_path: '', query: undefined})" ng-class="{ 'active' : nav.state.current.name == 'community.dashboard' }">
                         <a>OVERVIEW</a>
