--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -12,8 +12,8 @@
                     <button ng-if="profile.user.profile.parents[0]" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: profile.user.profile.home, community_path: profile.user.profile.parents[0]})">
                         {{profile.user.profile.parents[0][0].toUpperCase() + profile.user.profile.parents[0].slice(1);}}
                     </button>
-                    <button ng-if="global.community[profile.user.profile.home].profile.name" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: profile.user.profile.home})">
-                        {{global.community[profile.user.profile.home].profile.name}}
+                    <button ng-if="global.community.locations[profile.user.profile.home].profile.name" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: profile.user.profile.home, community_path: ''})">
+                        {{global.community.locations[profile.user.profile.home].profile.name}}
                     </button>
                 </div>
                 <h3 ng-show="profile.user.profile.name" style="padding-top: 5px; line-height: 1.5;">
