--- a/app/components/errors/404.html
+++ b/app/components/errors/404.html
@@ -1,7 +1,8 @@
 <div id="error-container">
     <div class="row">
         <div class="error-options" style="margin-left: 30px; margin-top: 20px; float: left;">
-            <p style="font-size: 1.5em;"><i class="fa fa-chevron-circle-left text-muted"></i> <a ng-click="goBack()">Go back</a></p>
+            <a href="javascript:window.history.back()" style="font-size: 1.5em;">
+            <i class="fa fa-chevron-circle-left text-muted"></i> Go back</a>
         </div>
         <div class="error-options" style="margin-right: 30px; margin-top: 20px; float: right;">
             <p style="font-size: 1.5em;"><a ui-sref="login">Login</a> <i style="font-size: .9em;" class="fa fa-chevron-circle-right text-muted"></i></p>
