--- a/app/components/nav/nav.embed_settings.html
+++ b/app/components/nav/nav.embed_settings.html
@@ -88,7 +88,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="settings.cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary" ng-click="settings.save()">Save</button>
+        <button ladda="settings.working" type="button" class="ladda-button btn btn-primary" ng-click="settings.save()">Save</button>
     </div>
 </div>
 
