--- a/app/components/users/user.invite.html
+++ b/app/components/users/user.invite.html
@@ -25,7 +25,7 @@
                             </td>
                         </tr>
                     </table>
-                    <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled}" value="Send Invitation" /><div style="padding-top: 6px; margin-bottom: -24px;" ng-show="global.loaders['invite']" loading-bars></div>
+                    <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled}" value="Send Invitation" /><div style="padding-top: 6px; margin-bottom: -24px;" ng-show="global.loaders['sendinvite']" loading-bars></div>
                 </form>
             </div>
         </div>
