--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -12,9 +12,9 @@
             <minimaliza-menu ng-if="::!global.embedded"></minimaliza-menu>
             <div class="navbar-left">
                 <div class="nav navbar-nav no-borders" style="white-space: nowrap;">
-                    <li style="float: left; padding-top: 7px;">
+                    <li style="float: left;">
                         <a ng-click="$('#searchform').submit()">
-                            <i class="pe-7s-search"></i>
+                            <i class="pe-7s-search" style="padding-top: 7px;"></i>
                         </a>
                     </li>
                     <form id="searchform" ng-submit="nav.search(global.query)" role="search" class="navbar-form-custom" method="post">
