--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -56,7 +56,7 @@
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
                     <li ng-if="global.user.communities.indexOf(global.location.key) > -1">
-                        <button class="btn btn-success" ng-click="nav.editCommunity({type:'cluster'});" style="margin: 10px 15px;">+&nbsp;&nbsp;Add Industry</button>
+                        <button class="btn btn-success" ng-click="nav.editCommunity();" style="margin: 10px 15px;">+&nbsp;&nbsp;Add Industry</button>
                     </li>
                 </ul>
             </div>
