--- a/app/less/various.less
+++ b/app/less/various.less
@@ -763,18 +763,18 @@ footer, .push {
   margin-left: -32px;
 }
 
-.header-nav li a {
+.header-nav li {
+  float: left;
+  margin-right: 20px;
+  height: 42px;
+}
+
+.header-nav li a, .header-nav li p {
   font-size: 14px;
   font-variant: small-caps;
   color: #9B9B9B;
   display: inline-block;
   padding: 11px 0;
-}
-
-.header-nav li {
-  float: left;
-  margin-right: 20px;
-  height: 42px;
 }
 
 .header-nav li a:hover, .header-nav li a:focus {
