--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -27,6 +27,11 @@
             <div style="padding-bottom: 10px;">
                 <hr>
                 <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.summary | linky:'_blank' | highlight:companies.lastQuery | safe_html"></span>
+                <div id="skills" ng-if="(showSummary || companies.lastQuery) && item.value.profile.summary" class="skills-top">
+                    <li ng-if="item.value.profile.industries" ng-repeat="market in item.value.profile.industries" class="label btn-default skills">
+                        <a><span ng-click="nav.search(market)" ng-bind-html="::market | highlight:companies.lastQuery"></span></a>
+                    </li>
+                </div>
             </div>
         </div>
     </div>
