--- a/app/components/users/user.dashboard.profile.html
+++ b/app/components/users/user.dashboard.profile.html
@@ -1,7 +1,7 @@
-<div ng-show="profile.user.profile.linkedin.summary" style="margin-top:10px;">
+<div ng-show="profile.user.profile.summary" style="margin-top:10px;">
     <h3>Summary</h3>
-    <p style="white-space:pre-wrap;" ng-bind-html="::profile.user.profile.linkedin.summary | linky:'_blank'"></p>
+    <p style="white-space:pre-wrap;" ng-bind-html="profile.user.profile.summary | linky:'_blank'"></p>
     <hr>
     <h3 ng-show="profile.user.profile.skills">Skills & Industries</h3>
-    <li ng-repeat="skill in profile.user.profile.skills" class="label btn-default skills"><a href="#" ui-sref="search.dashboard({location_path: global.location.key})">{{::skill}}</a></li>
+    <li ng-repeat="skill in profile.user.profile.skills" class="label btn-default skills"><a href="#" ng-click="nav.search(skill)">{{skill}}</a></li>
 </div>
